--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "jade": "^1.11.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-    "react-router": "^1.0.2"
+    "react-router": "^1.0.2",
+    "socket.io": "^1.3.7"
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
